[tool.poetry]
name = 'python_extras'
version = '0.1.4'
description = 'The package containing useful extras for Python - things that shold be in the standard library'
authors = ['Alexey <abelenkov2006@gmail.com>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/blnkoff/python-extras'
homepage = 'https://github.com/blnkoff/python-extras'
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3 :: Only',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS'
]
packages = [{ include = 'python_extras' }]

[tool.poetry.dependencies]
python = '^3.11'

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
build = "^1.0.3"
twine = "^4.0.2"

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
